# dotfiles

./: .ansible-lint  .gitignore  .prototools  .yamllint  CLAUDE.md  README.md  flake.nix  home-nixos.nix  home.nix  pyproject.toml  requirements-dev.txt  setup.sh  site.yml  treefmt.nix
.claude/: settings.local.json
.github/workflows/: ansible-lint.yml  ansible-test.yml  ci.yml  pr-report.yml  release.yml
config/claude/.claude/: CLAUDE.md  settings.json
config/tmux/: .tmux.conf
config/zsh/: .p10k.zsh  .zshrc
docs/: claude-code-best-practices.md
dotfiles/tmux/: .tmux.conf
handlers/: main.yml
hosts/: desktop.nix  server.nix
modules/: claude.nix  fastfetch.nix  gpu.nix  hyprland.nix  neovim.nix  rofi.nix  tmux.nix  tools-nixos.nix  tools.nix  waybar.nix  zsh.nix
modules/core/: home-nixos.nix  home.nix
modules/home/: bitwarden.nix  browsers.nix  ghostty.nix  git.nix  gpu.nix  hypridle.nix  hyprland.nix  hyprlock.nix  rofi.nix  swaync.nix  theming.nix  tmux.nix  tools-nixos.nix  tools.nix  wlogout.nix  zsh.nix
modules/home/neovim/: config.nix  default.nix  plugins.nix
modules/home/waybar/: default.nix  settings.nix  style.nix
modules/nixos/: hardware-nvidia.nix  hardware-vm.nix  stylix.nix
nixos/: configuration.nix  hardware-nvidia.nix  hardware-vm.nix
scripts/: bootstrap.sh  update-setup
src/dotfiles/: __init__.py  cli.py  config.py  console.py  runner.py
tasks/: git.yml  github.yml  local_bin.yml  neovim.yml  node.yml  python_uv.yml  tmux.yml  zsh.yml
tests/: __init__.py  test_cli.py  test_config.py  test_runner.py
(+24 files in other folders)
